motivation-scenario/new/log-collector-sidecar-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: log-collector-sidecar
  name: log-collector-sidecar
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: log-collector-sidecar
    spec:
      containers:
      - image: ckrieger/log-collector:latest
        name: log-collector-sidecar
        ports:
        - containerPort: 5050
        resources: {}
        volumeMounts:
        - mountPath: /loggingvolume/
          name: loggingvolume
      hostname: logCollectorSidecar
      restartPolicy: Always
      volumes:
      - name: loggingvolume
        persistentVolumeClaim:
          claimName: loggingvolume
status: {}
