motivation-scenario/new/log-collector-sidecar-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: log-collector-sidecar
  name: log-collector-sidecar
spec:
  ports:
  - name: "5050"
    port: 5050
    targetPort: 5050
  selector:
    io.kompose.service: log-collector-sidecar
status:
  loadBalancer: {}
